# ORCA_seathru

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: COLMAP_GUIDE.md  REEF_SPLAT_GUIDE.md  REEF_SPLAT_GUIDE_WINDOWS.md  make_gt_depth.py  make_test_subset.py  prepare_photogrammetry_set.py  ubuntu_seathru_colmap_guide.md  wslconfig-example.txt
scripts/: build_orthomosaic.py  colmap_geo_from_csv.py  colmap_georef_planar.py  colmap_make_chunks.py  colmap_make_pairs.py  compare_grid.py  hw_profile.py  param_effect_grid.py  param_grid_2d.py  process_test_set.py  run_colmap_wsl.sh  sample_test.py  seathru_qc_variants.py  synthetic_validation.py
seathru/: __init__.py  cli.py  core.py  io_images.py  metadata.py  pipeline.py  survey.py
seathru/depth/: __init__.py  base.py  colmap_source.py  estimated.py  file_source.py  monocular.py  plane_source.py
